src/test/deca/syntax/parser/valid/cast_class_to_subclass.deca
// Test parser, cast d'un cast de class en subclass

class Personne {

}

class Roi extends Personne {

}

{
    Personne lambda = new Personne();
    Roi roi = (Roi) (lambda);
}