src/test/deca/syntax/parser/invalid/inst_expr_while_sans_cond.deca
// Test de parser, le while n'a pas de condition, même pas de 
// parenthèses

{
    while { print(5)};
}